# risk-fraud-aml-systems

./: README.md
agentic-aml-investigator/: .gitignore  CLAUDE.md  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
agentic-aml-investigator/artifacts/eval/: granite4_1_8b.jsonl  granite4_1_8b_results.csv  granite4_1_8b_v2.jsonl  granite4_1_8b_v2_judge.csv  granite4_1_8b_v2_judge.jsonl  granite4_1_8b_v2_results.csv  headline_summary.json  qwen3_5_9b.jsonl  qwen3_5_9b_results.csv  qwen3_5_9b_v2.jsonl  qwen3_5_9b_v2_judge.csv  qwen3_5_9b_v2_judge.jsonl  qwen3_5_9b_v2_results.csv
agentic-aml-investigator/artifacts/reliability/: structured_output_benchmark.csv
agentic-aml-investigator/artifacts/reports/: CASE-ACC-0046.md  NB03-ACC-0001.md  NB03-ACC-0046.md  NB03-ACC-0081.md  granite4_1_8b-ACC-0001.md  granite4_1_8b-ACC-0002.md  granite4_1_8b-ACC-0003.md  granite4_1_8b-ACC-0004.md  granite4_1_8b-ACC-0005.md  granite4_1_8b-ACC-0011.md  granite4_1_8b-ACC-0029.md  granite4_1_8b-ACC-0036.md  granite4_1_8b-ACC-0040.md  granite4_1_8b-ACC-0046.md  granite4_1_8b-ACC-0047.md  granite4_1_8b-ACC-0053.md  granite4_1_8b-ACC-0054.md  granite4_1_8b-ACC-0061.md  granite4_1_8b-ACC-0062.md  granite4_1_8b-ACC-0063.md  granite4_1_8b-ACC-0071.md  granite4_1_8b-ACC-0081.md  granite4_1_8b_v2-ACC-0001.md  granite4_1_8b_v2-ACC-0002.md  granite4_1_8b_v2-ACC-0003.md  granite4_1_8b_v2-ACC-0004.md  granite4_1_8b_v2-ACC-0005.md  granite4_1_8b_v2-ACC-0011.md  granite4_1_8b_v2-ACC-0029.md  granite4_1_8b_v2-ACC-0036.md  granite4_1_8b_v2-ACC-0040.md  granite4_1_8b_v2-ACC-0046.md  granite4_1_8b_v2-ACC-0047.md  granite4_1_8b_v2-ACC-0053.md  granite4_1_8b_v2-ACC-0054.md  granite4_1_8b_v2-ACC-0061.md  granite4_1_8b_v2-ACC-0062.md  granite4_1_8b_v2-ACC-0063.md  granite4_1_8b_v2-ACC-0071.md  granite4_1_8b_v2-ACC-0081.md  (+36 more)
agentic-aml-investigator/notebooks/: 01_data_foundation.ipynb  02_tools_and_reliability.ipynb  03_investigation_graph.ipynb  04_evaluation.ipynb
agentic-aml-investigator/scripts/: build_notebooks.py
agentic-aml-investigator/src/aml_investigator/: __init__.py  db.py  llm.py  prompts.py  reporting.py  schemas.py  settings.py  telemetry.py
agentic-aml-investigator/src/aml_investigator/data/: generator.py  ofac.py
agentic-aml-investigator/src/aml_investigator/evaluation/: cases.py  judge.py  metrics.py  runner.py
agentic-aml-investigator/src/aml_investigator/graph/: build.py  state.py
agentic-aml-investigator/src/aml_investigator/tools/: forensics.py  sql_guard.py
agentic-aml-investigator/tests/: test_generator.py  test_graph_helpers.py  test_metrics.py  test_report_validator.py  test_sql_guard.py  test_structured_call.py
credit-risk-decisioning-system/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  credit_risk_decisioning_system.executed.ipynb  credit_risk_decisioning_system.ipynb  pyproject.toml
credit-risk-decisioning-system/app/: main.py
credit-risk-decisioning-system/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
credit-risk-decisioning-system/catboost_info/learn/: events.out.tfevents
credit-risk-decisioning-system/scripts/: download_data.sh  run_notebook.sh  setup_env.sh
credit-risk-decisioning-system/src/: data_prep.py  evaluation.py  features.py  modeling.py
multimodal-pytorch-risk-fusion/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  compare_encoders.py  generate_notebook.py  inference.py  multimodal_pytorch_risk_fusion.ipynb  pyproject.toml
multimodal-pytorch-risk-fusion/checkpoints/: preprocess.pkl
multimodal-pytorch-risk-fusion/figures/: _mrbert_deep_backup.csv  ablation.csv  encoder_comparison.csv  encoder_comparison_deep.csv  encoder_comparison_final.csv  encoder_report.md
multimodal-pytorch-risk-fusion/src/: data_loader.py  models.py  train.py
payment-fraud-risk-scoring/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  app.py  batch_score.py  fraud_risk_scoring.ipynb  pyproject.toml  train_model.py
payment-fraud-risk-scoring/src/: __init__.py  data.py  scoring.py  training.py
payment-fraud-risk-scoring/tests/: test_app.py  test_batch_score.py  test_scoring.py  test_training.py
pytorch-fraud-mlp/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  generate_notebook.py  inference.py  pyproject.toml  pytorch_fraud_mlp.ipynb
temporal-graph-aml-intelligence/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  generate_notebook.py  pyproject.toml  temporal_graph_aml_intelligence.ipynb
temporal-graph-aml-intelligence/figures/: summary_metrics.csv
temporal-graph-aml-intelligence/src/: data_loader.py  models.py  train.py
transaction-anomaly-detection/: .gitignore  README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  build_notebook.py  pyproject.toml  transaction_anomaly_detection.ipynb
transaction-anomaly-detection/src/: __init__.py  data.py  features.py  metrics.py  models.py  score.py
