[project]
name = "aml-investigator"
version = "0.1.0"
description = "Multi-agent AML investigation copilot — LangGraph + local Ollama over a DuckDB transaction warehouse"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain>=1.0,<2",
    "langchain-ollama>=1.0,<2",
    "duckdb>=1.1",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "faker>=30.0",
    "rapidfuzz>=3.10",
    "sqlglot>=25.0",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "loguru>=0.7",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbconvert>=7.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aml_investigator"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
