[project]
name = "payment-fraud-risk-scoring"
version = "0.1.0"
description = "Fraud risk scoring on imbalanced card-transaction data (PR-AUC, threshold tuning, XGBoost/LightGBM)."
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastapi>=0.136.3",
    "imbalanced-learn>=0.14.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kaggle>=2.2.1",
    "kagglehub>=1.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.2.0",
]
