[project]
name = "temporal-graph-aml-intelligence"
version = "0.1.0"
description = "Temporal transaction-graph AML/fraud intelligence on the Elliptic dataset: GraphSAGE/GAT + anomaly detection + hybrid risk scoring"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "torch>=2.6.0",
    "torch-geometric>=2.6.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "tqdm>=4.67.0",
    "kaggle>=1.7.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
