[project]
name = "transaction-anomaly-detection"
version = "0.1.0"
description = "Learning-first unsupervised anomaly detection for unusual transaction behaviour (Isolation Forest, LOF, One-Class SVM)."
requires-python = ">=3.12.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.12",
]
